docs: align Java rewrite with package organization